# cmake-demo

./: .gitignore
Demo3_1/: CMakeLists.txt  Demo  main.cc
Demo3_1/hello/: hello.cc
Demo3_1/world/: world.cc
Demo3_2/: CMakeLists.txt
